# dragonhack26

./: .gitignore  AGENTS.md  homography_matrix.json  main.py  main2.py  pyproject.toml
.kilo/plans/: 1776527508268-lucky-squid.md  1776560770828-quick-engine.md
aruco/: advanced_marker_detection_system.py  mainpy  marker_detection_system.py
backend/: calibration.py  connectionManager.py  dtos.py  main.py  mock_camera.py  player.py  turnManager.py
puck/: platformio.ini  shell.nix
puck/src/: main.cpp
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  Game.tsx  main.tsx
web/src/components/: CircleRenderer.tsx  ResponsiveStage.tsx
web/src/components/device/: Dev.tsx
web/src/types/: websocket.ts
