[project]
name = "dragonhack26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "fastapi>=0.136.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.13.2",
    "qrdet>=2.5",
    "ultralytics>=8.4.38",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
]
